updated at: 2023-04-25 16:58, [無料]simple ring - Materia Sarria - BOOTH

--- a/VRChat/17/1203717.html
+++ b/VRChat/17/1203717.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "y8geadnUnJjoyrcNqp1k9riWRXn40+ekzJUY2dKJJg8="></script>
+    "beKMG7r3tpksLcZQ3QH0ehQr8+XEkLMlGsmLyRDNIqc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料]simple ring","description":"shimplering\nマテリアル数：２\nポリゴン数：1088\n\nダイヤとリングでポリゴン数がわかれています。テクスチャ自体はリングのみですのでダイヤの部分はjemshaderおよびboothなどで配布されているシェーダーを使用することを想定しておりますのでご了承ください。\n\n※無料版と支援版の中身は変わりません","url":"https://booth.pm/ja/items/1203717","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1203717/790a68bd-2d90-47fd-a708-4208f68d0b35_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y8geadnUnJjoyrcNqp1k9riWRXn40+ekzJUY2dKJJg8="></script>
+    nonce="beKMG7r3tpksLcZQ3QH0ehQr8+XEkLMlGsmLyRDNIqc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1203717/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               114
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1203717/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               114
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
