--- a/VRChat/41/1202341.html
+++ b/VRChat/41/1202341.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "c405JQARDztYfhJpW4rzTrjFVkUQz6o4P9ngXOz6e2k="></script>
+    "ucHT+rfsRHCijg1UdM2JlJGmDT/rnuFlBhFi4TUDvUI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「チム」ver1.0","description":"オリジナル３Dモデル「チム」\n\nいつも眠そうな半霊の女の子です。\n\n本モデルはVRアバターでの使用を想定して制作しております\n（フルトラッキング対応）\n\nモデル改変、転用など、特に制限を設けておりません。自由に使ってください\n営利活動等でも利用可能です\n※著作権の放棄ではありません。自作発言等、良識に欠ける行いだけはやめてください\n\n\n○必要アセット（予めインポートしておいてください）\nVRCSDK\nArktoon-Shaders\n（ダイナミックボーン）\n\n\n○内容物\nUnityPackageデータ\nfbxデータ\nテクスチャ（png、psd）\nシェイプキーリスト画像\n説明書\n\n\n----------------------------------------------------\n更新履歴\n\n2019.1.28\n　リリース開始\n\n----------------------------------------------------\n\n","url":"https://booth.pm/ja/items/1202341","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d92f6cb7-dd7e-4d4c-81c1-456eb755836b/i/1202341/5af6ae1a-c9ca-4912-b31e-fb7051d93af4_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="c405JQARDztYfhJpW4rzTrjFVkUQz6o4P9ngXOz6e2k="></script>
+    nonce="ucHT+rfsRHCijg1UdM2JlJGmDT/rnuFlBhFi4TUDvUI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1202341/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               86
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1202341/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               86
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
