--- a/VRChat/40/1200840.html
+++ b/VRChat/40/1200840.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UKRCpgT4VMYwl+vLjTb+9Aypf85Rxt6/CYgrXZZxc10="></script>
+    "kQk1CNq44rChQqLIYF2YGvCzzEAu5m9PKb8QoFLwp+M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"福豆入りの升","description":"福豆入りの升と豆のセットです。\n別売りの鬼のお面・巻き寿司と組み合わせて節分ごっこができます。\n豆のモデルはパーティクルや物理演算で飛ばす等でご利用ください。※パーティクルは入っていません。\n\n内容\n・福豆入りの升\n・豆（1個）\n\n〇できること\n・VRChatで使用する。\n・VRChat以外で使用する。\n・自作アプリケーションに組み込む（商用可）\n　Unity以外でもご利用いただけます。\n・VTuber活動の動画の素材として利用する\n・モデルデータ・テクスチャを加工する\n・マテリアル・シェーダの変更はご自由に\n\n〇できないこと\n・モデルデータ・テクスチャの再配布\n　モデルやテクスチャのオリジナルおよび、\n　それを元に加工したデータの再配布は禁止とします。\n・オンラインゲーム内で、プレーヤー間で交換できる\n　アイテムとしての利用も再配布に当たります。\n\n【使い方】\nダウンロードしたZipファイルを解凍後、Unityパッケージをプロジェクトにインポートしてください。Unity以外の環境はFBXフォルダ内のモデルデータ・テクスチャをご利用いただけます。\n\n【免責事項】\n当データ及び当データの一部を使用していかなる損害が発生したとしても当方はその責を負いません。","url":"https://booth.pm/ja/items/1200840","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e1268668-be07-4201-814f-45e16892cfb6/i/1200840/f020db4c-ce55-4c4e-85ed-472d1d5deefe_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UKRCpgT4VMYwl+vLjTb+9Aypf85Rxt6/CYgrXZZxc10="></script>
+    nonce="kQk1CNq44rChQqLIYF2YGvCzzEAu5m9PKb8QoFLwp+M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1200840/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1200840/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
