--- a/VRChat/59/1198259.html
+++ b/VRChat/59/1198259.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zrpOAAgwDbhHF3m5FfNoaAtOQv5qceCKQ+eQuVeWlEQ="></script>
+    "xha6pFd+/htmb/7+S0rS1R7WllBN3ITzvHzILXgLrvU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"FMG-01 パーティクルありバージョン","description":"本モデルは【VRChat】向けに作成したものです。近未来的なデザインにしましたが、これは魔法の銃です。ファンタジーです。\n\n●内容物\nFMG-01 パーティクルありバージョン　Unity package file\nFMG-01 FBX file 1441ポリゴン\nFMG-01 本体 tex\nFMG-01 弾倉 tex\nFMG-01 Blender File\n使い方　jpg\nread me\n\n\n●利用条件\n\n本モデルの営業利用目的は可\n本モデルの改変は可\n\n●免責事項\n\n本データを使用し、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n\n■禁止事項\n\n公序良俗に反する行為、政治、宗教活動、誹謗中傷目的での使用\n\n　初心者が作ったモデルですが、使って頂ければ嬉しく思います。","url":"https://booth.pm/ja/items/1198259","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/741f082a-ec37-455c-86ce-729327cdd36e/i/1198259/fc30c85d-34dc-424c-b5f7-da0645f8ea30_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zrpOAAgwDbhHF3m5FfNoaAtOQv5qceCKQ+eQuVeWlEQ="></script>
+    nonce="xha6pFd+/htmb/7+S0rS1R7WllBN3ITzvHzILXgLrvU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1198259/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1198259/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
