--- a/VRChat/16/1198516.html
+++ b/VRChat/16/1198516.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Vd5igxeqP9l9ok8gSCbYnUVnKCWwi19Hnflep6Vvax0="></script>
+    "A49JT7zXfOSxkXQ3W3wzikHEHCxwI7RmNb5al/lD/b4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け3Dモデル] うさみみウェイトレスさん","description":"[VRChat向け3Dモデル]　うさみみウェイトレスさん\n\nVRChatを想定したアバターモデルです。\nUnity2018に対応しています。\nVRMも付属しています。\nアバター3.0に対応しています。\n\nVer3.00以降 PhysBonesに対応しています。\n\nゲームや映像作品の素材としてもおつかいただけます。\n","url":"https://booth.pm/ja/items/1198516","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/6d25c339-b51a-47b5-8e63-8735e5161229/i/1198516/f32a661a-b7da-47d8-aee6-1dffadd85b8f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Vd5igxeqP9l9ok8gSCbYnUVnKCWwi19Hnflep6Vvax0="></script>
+    nonce="A49JT7zXfOSxkXQ3W3wzikHEHCxwI7RmNb5al/lD/b4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1198516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               483
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1198516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               483
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
