updated at: 2023-04-25 17:00, ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - ららるーのアトリエ - BOOTH

--- a/VRChat/41/1198541.html
+++ b/VRChat/41/1198541.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1198541">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="UA-133290667-1">
+    <meta name="ga:shop" content="G-TB10B5KJ0G">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/U2Ewl17sqqweszhdKcwjFBRxdM/+aD2yN+stp48blk="></script>
+    "g5zWTTBsHDRxSrIReaUoUgd/pRyEnvJ43/I174ttmRg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ミリタリーワンピースセット【VRoid用（ FBXモデル付）】","description":"VRoidβ版とVRoid正式版どちらでも着れます。\nこのデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。\nセシル変身はもちろん、ワンピースのFBX入りなのでVRoidでなくても着用可能（FBXの利用はモデリングソフトなどが必要です）\n\n『Vket3 \u003e 九龍帝国城下町-参番街 \u003e 提灯横丁 \u003e 純喫茶ひきこもり庵2F』\n『Vket4 \u003e ワールドエンド・ユートピア \u003e ジュリエット \u003e 破滅の残り香』\n『アバターミュージアム小物/衣装展』の衣装展\nに出展しています。","url":"https://booth.pm/ja/items/1198541","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/ec21fc99-0aa2-4e8d-8c58-ad56f5127ef1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/U2Ewl17sqqweszhdKcwjFBRxdM/+aD2yN+stp48blk="></script>
+    nonce="g5zWTTBsHDRxSrIReaUoUgd/pRyEnvJ43/I174ttmRg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -102,7 +102,7 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id="UA-133290667-1"
+        <div class="market" data-ga-tracking-id="G-TB10B5KJ0G"
         data-product-brand="promethe" data-product-category="212"
         data-product-id="1198541" data-product-list="market_show"
         data-product-price="500"
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1198541/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               700
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1198541/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               700
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -237,7 +238,7 @@
                                         data-product-list=
                                         "from market_show via market as gift to add_item"
                                         data-ga-tracking-id=
-                                        "UA-133290667-1" type=
+                                        "G-TB10B5KJ0G" type=
                                         "submit"><input type=
                                         "hidden" name=
                                         "cart_item[variation_id]"
@@ -270,7 +271,7 @@
                                           data-product-list=
                                           "from market_show via market as gift to add_item"
                                           data-ga-tracking-id=
-                                          "UA-133290667-1" type=
+                                          "G-TB10B5KJ0G" type=
                                           "submit">ギフトとして贈る</button>
                                         </div>
                                       </form>
