--- a/VRChat/88/1198388.html
+++ b/VRChat/88/1198388.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/3Fj4B99Y7/bvOJh6owatjesNJ2EaN8hOSc0Tke631w="></script>
+    "GgFDxFoLOG4qLrF5DHZMnsBGFSz9ieJH7Q/K73I9D74="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ジャンク品】新東亜鐵鋼製汎用素体N-31-F　ヘッド・チェストパーツ【欠損パーツあり】【仮想現実素体】【特価価格】","description":"ベストセラー素体の頭部＆胸部パーツ！\n自作仮想義体作成などに最適！\n\n仕様：\n新東亜鐵鋼製汎用素体N-31-F\n\n塗装はすべて剥離しています。\n動力部はありません。\n\n\nジャンク品のため、返品は対応しておりません。","url":"https://booth.pm/ja/items/1198388","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/400429d0-2017-4163-9ffd-bcce2b3b086f/i/1198388/0066c35d-51d5-45e3-bbf4-ff3f631aeb1a_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/3Fj4B99Y7/bvOJh6owatjesNJ2EaN8hOSc0Tke631w="></script>
+    nonce="GgFDxFoLOG4qLrF5DHZMnsBGFSz9ieJH7Q/K73I9D74="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1198388/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1198388/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
