updated at: 2023-04-25 17:00, 闇の妄土 - wolha - BOOTH

--- a/VRChat/14/1198114.html
+++ b/VRChat/14/1198114.html
@@ -70,9 +70,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NtRJL8h5p6CN4PXWaPqfT/zlGv/lBTYEj6bO7BFgdNU="></script>
+    "Vc/8vKNfw3yuYLwnWE3mygGgoq+5z3TZF1zWHR8/Qkg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"闇の妄土","description":"闇の妄土\n\n4,999 ポリゴン","url":"https://booth.pm/ja/items/1198114","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/5adad7c6-5d25-4d80-96b6-1e3f9176934c/i/1198114/211be4bf-0db2-425d-aea9-1b305c8d1d40_base_resized.jpg"}
     </script>
@@ -86,7 +86,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NtRJL8h5p6CN4PXWaPqfT/zlGv/lBTYEj6bO7BFgdNU="></script>
+    nonce="Vc/8vKNfw3yuYLwnWE3mygGgoq+5z3TZF1zWHR8/Qkg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -110,6 +110,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1198114/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1198114/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
