updated at: 2023-04-25 17:00, 独り身バッチ - ペンギン王国 - BOOTH

--- a/VRChat/89/1197889.html
+++ b/VRChat/89/1197889.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZLf4KYOUYiOuAUw/Qeer41aeDeJKq4l29ZkK6pKaLhw="></script>
+    "rbqtGefp0tI8tfREom7gryDEQCKTG1IJwDfiLSeB4Zw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"独り身バッチ","description":"暖かさが欲しい人にぜひ使って欲しいバッチです\nキヨネコさんにテクスチャを描いて頂きました\n規約：\nこのモデルに関して問題は一切負いません","url":"https://booth.pm/ja/items/1197889","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/43cf9412-f2b9-411c-9546-f23a7355aa0a/i/1197889/d9024ed4-5470-41bf-8161-7e9bf8c8299b_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZLf4KYOUYiOuAUw/Qeer41aeDeJKq4l29ZkK6pKaLhw="></script>
+    nonce="rbqtGefp0tI8tfREom7gryDEQCKTG1IJwDfiLSeB4Zw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1197889/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1197889/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
