--- a/VRChat/36/1197336.html
+++ b/VRChat/36/1197336.html
@@ -71,49 +71,27 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-  </head>
-  <body>
-    <div class="mini-player-controller" style="display: none;">
-      <a class="scroller" data-smooth-scroll="true"><img class=
-      "mini-player-controller__image" src=
-      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
-      data-smooth-scroll="true">
-      <div class="mini-player-information__item-name"></div>
-      <div class="mini-player-information__shop-name"></div>
-      <div class="mini-player-information__navigation">
-        試聴中の商品へスクロール
-      </div></a>
-      <div class="mini-player-controls">
-        <div class="mini-player-mode-ui">
-          <div class="mini-player-mode-ui__knob"></div>
-          <div class="mini-player-mode-ui__short">
-            15秒
-          </div>
-          <div class="mini-player-mode-ui__full">
-            フル
-          </div>
-        </div>
-        <div class="mini-player-play-ui"></div>
-      </div>
-    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mw37DAnmpzlFBBRW49OD3MkKklPX6usnD2uLUmP2RsE="></script>
+    "uw9xJBzCyJXLVk1QGs5RFyJZDJMOjk0o60bFwH7fC44="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クリスタルショートソード","description":"三角ポリゴン：1148ポリゴン（１モデルあたり）\n（updateなどで若干誤差が出る可能性があります）\n\n装着するモデルによってshaderが異なる為、\nFBX形式で頒布していますので、Material設定が必要になります。\n\n付属品（青・赤セットです）\n青版：fbxモデル　テクスチャ用png１枚（1024pixel）\n赤版：fbxモデル　テクスチャ用png１枚（1024pixel）\n編集用PSD（2048pixel）\n\n標準では1024pixelのテクスチャが入っています。\n付属PSDは2048pixelになっていますので、高解像度のテクスチャが必要な場合や好みのサイズを作りたい場合は其方をご利用ください。\n","url":"https://booth.pm/ja/items/1197336","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/679d00c5-3e09-411d-9a44-d32751ce260e/i/1197336/9464de58-a28d-4e91-b46e-c7246eac39d7_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed"><noscript><iframe height="0"
-    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed">
+  </head>
+  <body>
+    <noscript><iframe height="0" src=
+    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mw37DAnmpzlFBBRW49OD3MkKklPX6usnD2uLUmP2RsE="></script>
+    nonce="uw9xJBzCyJXLVk1QGs5RFyJZDJMOjk0o60bFwH7fC44="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1197336/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              165
+                              164
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -195,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1197336/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              165
+                              164
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
