updated at: 2023-04-25 17:01, ナ　ス - 貸出用コンテナ - BOOTH

--- a/VRChat/63/1196863.html
+++ b/VRChat/63/1196863.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hhldBMJO3O0mQTQKWYr56nvGp907GWti/uZylyfPJz8="></script>
+    "aP29PRjPH+OScdBFarRD97bwCAiGJc708qqPuaskhXU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ナ　ス","description":"なすです。(△1,152)\n\n形式:UnityPackage(Zip圧縮済み)\n【内容物:FBX,マテリアルデータ、テクスチャー、prefab】\n\n\n商用利用、VRChat、etc...\n一般常識範囲内でご自由にご利用くだナス。\n裏面描画に対応してるマテリアルでの使用がオススメです。\n\n※当モデルデータをダウンロード、利用したことにより発生したトラブル等に対して、製作者は一切の責任を負いません。","url":"https://booth.pm/ja/items/1196863","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/32283ad0-3069-4adc-a557-8d34b693e088/i/1196863/017b5fa0-1b76-449c-ad89-95c0d89ff479_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hhldBMJO3O0mQTQKWYr56nvGp907GWti/uZylyfPJz8="></script>
+    nonce="aP29PRjPH+OScdBFarRD97bwCAiGJc708qqPuaskhXU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1196863/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1196863/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
