updated at: 2023-04-25 17:02, 離席用看板 - a-a-a-aa-a-a-a - BOOTH

--- a/VRChat/49/1196149.html
+++ b/VRChat/49/1196149.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vqdIBV1Y4MK2Y7+LNYLqMH04CCYp2nLWNDiTTmUEMMg="></script>
+    "iIewX/8726Iq4blh2AVA2wS475b0Bu0g5ojS+Y0YGeo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"離席用看板","description":"離席用看板\n△108","url":"https://booth.pm/ja/items/1196149","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/48e79fa3-70ff-4b31-abf4-1a13f49ebac5/i/1196149/f01e663d-c04d-440e-b088-ce06c99f0f37_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vqdIBV1Y4MK2Y7+LNYLqMH04CCYp2nLWNDiTTmUEMMg="></script>
+    nonce="iIewX/8726Iq4blh2AVA2wS475b0Bu0g5ojS+Y0YGeo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,6 +112,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,10 +157,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1196149/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              252
+                              253
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1196149/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              252
+                              253
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
