updated at: 2023-04-25 17:04, イルミブレスレット 3Dモデル - トドネロマーケット - BOOTH

--- a/VRChat/21/1193921.html
+++ b/VRChat/21/1193921.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "coc/2YYQg+djv4BrO5c19LQ1fhykynW0GqZozXR+dHM="></script>
+    "lswoZFbofw5ODK8qURUYffmKWNfz1oAhiPIftMMIP+M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"イルミブレスレット 3Dモデル","description":"------------Vケット3開催記念!----------------\n今なら通常価格の半額100円で販売中！\n------------Vケット3開催記念!----------------\n\n光る！回る！VRChat向けアイテム！\n\nVRChat用キャラクターに装着させたりするイルミブレスレットのモデルです。\n\nUnityのマテリアルから発光色・発光の強さ・模様の切り替え・回転速度を動的に変更することが可能です！\n\nテクスチャを使用して発光させているので模様や文字、絵なども表示可能です！\n\nシェーダーを使用しているのでVRChat上でも動作します！\n(2018/1/23現在　動作確認済)","url":"https://booth.pm/ja/items/1193921","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3aa1bab8-cccc-48b8-ac57-d4085ce31722/i/1193921/f41a6cd1-7fa2-4021-850f-a49157b69866_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="coc/2YYQg+djv4BrO5c19LQ1fhykynW0GqZozXR+dHM="></script>
+    nonce="lswoZFbofw5ODK8qURUYffmKWNfz1oAhiPIftMMIP+M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1193921/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1193921/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
