updated at: 2023-04-25 17:04, 0123 in my room【VRChatワールド向けBGM】 - せや屋 - BOOTH

--- a/VRChat/51/1193751.html
+++ b/VRChat/51/1193751.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "d6rzBBANq2bVZ0Zww+1x4S7OpLqXxvzLG7+Qac1mIww="></script>
+    "QKv8Pd8yrWb8ld7mcHOnZz+JEi9iXsor3nnGw1VjJUY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"0123 in my room【VRChatワールド向けBGM】","description":"落ち着いた雰囲気のあるワールドに使えそうな感じのBGMです。\n\n禁止事項\n偽った著作表記\n二次配布\n曲だけを販売目的で使用する\n\n上記に反しない場合は商用非商用限らず自由にしてもらって構いません。\n使用報告はしなくてもいいですがTwitterで一言もらえると喜びます。\n\nクレジット表記していただける際は\nBGM　Kew - 0123 in my room　\nをお使いください。\n\n1/25 少し修正を加えました","url":"https://booth.pm/ja/items/1193751","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/56117571-5fcc-4f33-9815-db26898aefb5/i/1193751/1b7e00e1-e035-44fa-99cb-264d204ef770_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="d6rzBBANq2bVZ0Zww+1x4S7OpLqXxvzLG7+Qac1mIww="></script>
+    nonce="QKv8Pd8yrWb8ld7mcHOnZz+JEi9iXsor3nnGw1VjJUY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1193751/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               339
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1193751/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               339
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
