updated at: 2023-04-25 17:07, ノートPC - れおの作ったもの倉庫 - BOOTH

--- a/VRChat/81/1187881.html
+++ b/VRChat/81/1187881.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0gCu/HDQlFPNCICwk+ncW85aaafaC1la+MIRI/je7u0="></script>
+    "8w8m5Ofb1vnMDipGfGIioeihBKezDR7UiIOhYSvr/oQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ノートPC","description":"パソコンのfbxモデルです\n画面のuvが同梱してあるので画面を自由に作れます\n\n\n自作発言、モデルを無改変で再配布以外は何でもしても良いです。\nクレジット書いてもらえると嬉しいです","url":"https://booth.pm/ja/items/1187881","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b6966d68-eb85-489d-8c1f-42fadc968b81/i/1187881/20455221-8cbb-4c92-9717-60b99ee7f3fc_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0gCu/HDQlFPNCICwk+ncW85aaafaC1la+MIRI/je7u0="></script>
+    nonce="8w8m5Ofb1vnMDipGfGIioeihBKezDR7UiIOhYSvr/oQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,10 +159,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1187881/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              721
+                              722
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1187881/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              721
+                              722
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
